--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,13 @@
   "license": "MIT",
   "require": {
     "php": ">=5.5.9",
-    "illuminate/support": "~5.0",
-    "nesbot/carbon": "~2.0",
-    "guzzlehttp/guzzle": "~5.0|~6.0"
+    "illuminate/support": "*",
+    "nesbot/carbon": "*",
+    "guzzlehttp/guzzle": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.0",
-    "fabpot/goutte": "~3.2"
+    "phpunit/phpunit": "*",
+    "fabpot/goutte": "*"
   },
   "autoload": {
     "psr-4": {
